--- a/pom.xml
+++ b/pom.xml
@@ -1,157 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <parent>
-        <groupId>org.mule.extensions</groupId>
-        <artifactId>mule-core-modules-parent</artifactId>
-        <version>1.1.3</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.mule.extensions</groupId>
+		<artifactId>mule-core-modules-parent</artifactId>
+		<version>1.1.3</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mule.modules</groupId>
-    <artifactId>mule-compression-module</artifactId>
-    <packaging>mule-extension</packaging>
-    <version>2.1.0-SNAPSHOT</version>
+	<groupId>org.mule.modules</groupId>
+	<artifactId>mule-compression-module-ext</artifactId>
+	<packaging>mule-extension</packaging>
+	<version>2.1.4</version>
 
-    <name>Compression Module</name>
-    <description>A Mule module that provides functionality for managing compressed files</description>
+	<name>Compression Module</name>
+	<description>A Mule module that provides functionality for managing compressed files</description>
 
-    <properties>
-        <formatterConfigPath>formatter.xml</formatterConfigPath>
-        <file.connector.version>1.1.2</file.connector.version>
-        <munit.input.directory>src/test/munit</munit.input.directory>
-        <munit.output.directory>${basedir}/target/test-mule/munit</munit.output.directory>
-        <munit.extensions.maven.plugin.version>1.0.0-BETA</munit.extensions.maven.plugin.version>
-        <munit.version>2.2.0-BETA</munit.version>
-        <mavenResourcesVersion>3.0.2</mavenResourcesVersion>
-        <javax.jaxb-api.version>2.3.0</javax.jaxb-api.version>
-    </properties>
+	<properties>
+		<formatterConfigPath>formatter.xml</formatterConfigPath>
+		<file.connector.version>1.1.2</file.connector.version>
+		<munit.input.directory>src/test/munit</munit.input.directory>
+		<munit.output.directory>${basedir}/target/test-mule/munit</munit.output.directory>
+		<munit.extensions.maven.plugin.version>1.0.0-BETA</munit.extensions.maven.plugin.version>
+		<munit.version>2.2.0-BETA</munit.version>
+		<mavenResourcesVersion>3.0.2</mavenResourcesVersion>
+		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
+		<javax.jaxb-api.version>2.3.0</javax.jaxb-api.version>
+	</properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${mavenResourcesVersion}</version>
-                <executions>
-                    <execution>
-                        <id>copy-munit-resources</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${munit.output.directory}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${munit.input.directory}</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.mulesoft.munit</groupId>
-                <artifactId>munit-extensions-maven-plugin</artifactId>
-                <version>${munit.extensions.maven.plugin.version}</version>
-                <configuration>
-                    <runtimeConfiguration>
-                        <discoverRuntimes>
-                            <product>EE</product>
-                            <includeSnapshots>true</includeSnapshots>
-                        </discoverRuntimes>
-                    </runtimeConfiguration>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <phase>integration-test</phase>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <!-- MUnit Dependencies -->
-                    <dependency>
-                        <groupId>com.mulesoft.munit</groupId>
-                        <artifactId>munit-runner</artifactId>
-                        <version>${munit.version}</version>
-                        <classifier>mule-plugin</classifier>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.mulesoft.munit</groupId>
-                        <artifactId>munit-tools</artifactId>
-                        <version>${munit.version}</version>
-                        <classifier>mule-plugin</classifier>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${mavenResourcesVersion}</version>
+				<executions>
+					<execution>
+						<id>copy-munit-resources</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${munit.output.directory}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${munit.input.directory}</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.mulesoft.munit</groupId>
+				<artifactId>munit-extensions-maven-plugin</artifactId>
+				<version>${munit.extensions.maven.plugin.version}</version>
+				<configuration>
+					<runtimeConfiguration>
+						<discoverRuntimes>
+							<product>EE</product>
+							<includeSnapshots>true</includeSnapshots>
+						</discoverRuntimes>
+					</runtimeConfiguration>
+				</configuration>
+				<dependencies>
+					<!-- MUnit Dependencies -->
+					<dependency>
+						<groupId>com.mulesoft.munit</groupId>
+						<artifactId>munit-runner</artifactId>
+						<version>${munit.version}</version>
+						<classifier>mule-plugin</classifier>
+					</dependency>
+					<dependency>
+						<groupId>com.mulesoft.munit</groupId>
+						<artifactId>munit-tools</artifactId>
+						<version>${munit.version}</version>
+						<classifier>mule-plugin</classifier>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
+				<version>${mule.maven.plugin.version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.18</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-file-connector</artifactId>
-            <version>${file.connector.version}</version>
-            <classifier>mule-plugin</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${javax.jaxb-api.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.18</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-file-connector</artifactId>
+			<version>${file.connector.version}</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${javax.jaxb-api.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-    <distributionManagement>
-        <downloadUrl>http://www.mulesoft.org/display/MULE/Download</downloadUrl>
-        <repository>
-            <id>mule-releases</id>
-            <name>Mule Release Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>mule-snapshots</id>
-            <name>Mule Snapshot Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>wsl-nexus-releases</id>
+			<name>wsl-nexus-releases</name>
+			<url>https://nexus.whiteskylabs.com/repository/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>wsl-nexus-snapshots</id>
+			<name>wsl-nexus-snapshots</name>
+			<url>https://nexus.whiteskylabs.com/repository/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 
-    <repositories>
-        <repository>
-            <id>mule</id>
-            <name>Mule Repository</name>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-        </repository>
-        <repository>
-            <id>spring-snapshot</id>
-            <name>Spring Snapshot Repository</name>
-            <url>http://repo.spring.io/snapshot/</url>
-        </repository>
-    </repositories>
+	<repositories>
+		<repository>
+			<id>mule</id>
+			<name>Mule Repository</name>
+			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+		</repository>
+		<repository>
+			<id>spring-snapshot</id>
+			<name>Spring Snapshot Repository</name>
+			<url>http://repo.spring.io/snapshot/</url>
+		</repository>
+	</repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>mule-plugin</id>
-            <name>Mule Repository</name>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>mule-plugin</id>
+			<name>Mule Repository</name>
+			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
